[package]
name = "aniodb"
version = "0.1.0"
edition = "2021"

[features]
fetch = ["ureq"]

[dependencies]
anyhow = "1.0.62"
json-deserializer = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
simd-json = { version = "0.6.0", optional = true, features = ["allow-non-simd"] }
url = { version = "2.2.2", features = ["serde"] }
ureq = { version = "2.5.0", optional = true }
thiserror = "1.0.33"
